# cookiecutter-starlite-halfstack

./: README.md  cookiecutter.json  pyproject.toml
docs/: tutorial.html  tutorial.md
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_slug}}/: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.html  README.md  alembic.ini  docker-compose.yaml  mypy.ini  pyproject.toml  sonar-project.properties  tox.ini
{{cookiecutter.project_slug}}/alembic/: env.py
{{cookiecutter.project_slug}}/alembic/versions/: 622211feaeb0_initial_revision.py
{{cookiecutter.project_slug}}/app/: __init__.py  app.py  settings.py
{{cookiecutter.project_slug}}/app/controllers/: __init__.py  authors.py
{{cookiecutter.project_slug}}/app/models/: __init__.py  authors.py  delivery.py
{{cookiecutter.project_slug}}/app/modules/: email.py
{{cookiecutter.project_slug}}/scripts/: entry
